--- a/sass/modules/breadcrumb/_breadcrumb.scss
+++ b/sass/modules/breadcrumb/_breadcrumb.scss
@@ -1,5 +1,5 @@
 .page-breadcrumb-area {
-  padding-top: 359px;
+  padding-top: 302px;
   padding-bottom: 182px;
   position: relative;
   z-index: 2;
